# image-processing_study

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
assignments/01_filtering/: filtering_funcs.py
assignments/false_colors/: 03_false_colors.ipynb  false_colors_funcs.py
assignments/filtering/: 01_filtering.ipynb  filtering_funcs.py
assignments/resize/: 02_resize_task.ipynb  resize_funcs.py
in-class/: fourier.ipynb  img_spec_filt.ipynb  img_transforms.ipynb  matplotlib.ipynb  numpy.ipynb
tests/: __init__.py  test_false_colors.py  test_filtering.py  test_resize.py
